--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/dragu">Dragu</a></li>
             </ul>
           </div>
         </div>
@@ -54,5 +55,6 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
+        <script src="scripts/components/homeComponent.js"></script>
 </body>
 </html>
